# giuakyros

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml
launch/: gazebo.launch.py
meshes/: banhphai_link.STL  banhtrai_link.STL  base_link.STL  camera.STL  dexoay.STL  khau1.STL  lidar1.STL  lidar2.STL  phaiduoi.STL  phaitren.STL  traiduoi.STL  traitren.STL
rviz/: urdf_config.rviz
scripts/: arm_node.py  arm_teleop_key.py
urdf/: assem3.csv  assem3.urdf
worlds/: my_world.world
